src/style.css
body {
	padding-top: 70px;
}

.icon {
	font-size: 14pt;
}

#filetable tr td:nth-child(5) {
	text-align: center;
}
#filetable tr td:nth-child(6) {
	text-align: center;
}
#filetable tr td:last-child {
	text-align: right;
}

a { cursor: pointer !important; }

img.imgpreview { max-width: 100%; }

div#content { width: 100%; height: 350px; }

input[name=newperms] { width: 7em; }

#filetable tr th.buttons { min-width: 95px; }
#filetable tr.clickable-row.active td { background-color: lightblue; }

#navbar { max-width: 100%; }

div.footer { color: #adadad; font-size: 10pt; }
div.footer div.panel-body { padding: 5px !important; }

@media (max-width: 768px) {
	.icon { font-size: 12pt; }
	#filetable tr th.buttons { min-width: 85px !important; }
}

#waitqueue {
	position: fixed;
	display: block;
	bottom: 1em;
	width: 100%;
	text-align: center;
}

#waitqueue > div {
	width: 75%;
	margin: auto;
}

#waitqueue .progress {
	position:relative;
	margin-bottom: 0;
}
#waitqueue .progbarlabel {
	position:absolute;
	top: 0;
	left: 10px;
	font-weight: bold;
}

